[package]
name = "tictacacs"
version = "0.0.1"
authors = ["Samani G. Gikandi <samani@gojulas.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitflags = "1.2"
num-derive = "0.3"
num-traits = "0.2"
byteorder = "1.4"
log = "0.4"
md-5 = "0.9"

[dev-dependencies]
env_logger = "0.8"
structopt = "0.3"